--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,989</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,804</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">api.test.UserTests2</td><td><a href="#m0">testDeleteUser</a></td><td rowspan="1">1750966627084</td><td rowspan="1">1527</td></tr><tr class="passedeven"><td><a href="#m1">testGetUser</a></td><td rowspan="1">1750966624026</td><td rowspan="1">1466</td></tr><tr class="passedeven"><td><a href="#m2">testPostUser</a></td><td rowspan="1">1750966618836</td><td rowspan="1">5159</td></tr><tr class="passedeven"><td><a href="#m3">testUpdateUser</a></td><td rowspan="1">1750966625504</td><td rowspan="1">1572</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">api.test.StoreTests2</td><td><a href="#m0">testDeleteOrderByOrderId</a></td><td rowspan="1">1751288457528</td><td rowspan="1">1490</td></tr><tr class="passedeven"><td><a href="#m1">testGetOrderByOrderId</a></td><td rowspan="1">1751288456046</td><td rowspan="1">1472</td></tr><tr class="passedeven"><td><a href="#m2">testPotsStore</a></td><td rowspan="1">1751288450855</td><td rowspan="1">5168</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">api.test.UserTests2#testDeleteUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">api.test.UserTests2#testGetUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">api.test.UserTests2#testPostUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">api.test.UserTests2#testUpdateUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">api.test.StoreTests2#testDeleteOrderByOrderId</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">api.test.StoreTests2#testGetOrderByOrderId</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">api.test.StoreTests2#testPotsStore</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
