--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,32 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.UserDataDrivenTests" class="method navigator-link" hash-for-method="testDeleteUser(testuser3)">testDeleteUser(testuser3)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.test.PetsTests1" class="method navigator-link" hash-for-method="deletePetById(org.testng.TestRunner@528c868)">deletePetById(org.testng.TestRunner@528c868)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.UserDataDrivenTests" class="method navigator-link" hash-for-method="testDeleteUser(testuser1)">testDeleteUser(testuser1)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.test.PetsTests1" class="method navigator-link" hash-for-method="getPetById(org.testng.TestRunner@528c868)">getPetById(org.testng.TestRunner@528c868)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.UserDataDrivenTests" class="method navigator-link" hash-for-method="testDeleteUser(testuser2)">testDeleteUser(testuser2)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.UserDataDrivenTests" class="method navigator-link" hash-for-method="testPostUser(1020, testuser2, Kim, Kom, b@gmail.com, test@2, 1234567890)">testPostUser(1020, testuser2, Kim, Kom, b@gmail.com, test@2, 1234567890)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.UserDataDrivenTests" class="method navigator-link" hash-for-method="testPostUser(1010, testuser1, John, Canedy, a@gmail.com, test@1, 1234567890)">testPostUser(1010, testuser1, John, Canedy, a@gmail.com, test@1, 1234567890)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.test.UserDataDrivenTests" class="method navigator-link" hash-for-method="testPostUser(1030, testuser3, Smith, Steve, c@gmail.com, test@3, 1234567890)">testPostUser(1030, testuser3, Smith, Steve, c@gmail.com, test@3, 1234567890)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.test.PetsTests1" class="method navigator-link" hash-for-method="testPostPet(org.testng.TestRunner@528c868)">testPostPet(org.testng.TestRunner@528c868)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -146,55 +131,31 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">api.test.UserDataDrivenTests</span>
+              <span class="class-name">api.test.PetsTests1</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testDeleteUser(testuser3)">
-                  </a> <!-- testDeleteUser(testuser3) -->
-                  <span class="method-name">testDeleteUser</span>
-                  <span class="parameters">(testuser3)</span>
+                  <a name="deletePetById(org.testng.TestRunner@528c868)">
+                  </a> <!-- deletePetById(org.testng.TestRunner@528c868) -->
+                  <span class="method-name">deletePetById</span>
+                  <span class="parameters">(org.testng.TestRunner@528c868)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testDeleteUser(testuser1)">
-                  </a> <!-- testDeleteUser(testuser1) -->
-                  <span class="method-name">testDeleteUser</span>
-                  <span class="parameters">(testuser1)</span>
+                  <a name="getPetById(org.testng.TestRunner@528c868)">
+                  </a> <!-- getPetById(org.testng.TestRunner@528c868) -->
+                  <span class="method-name">getPetById</span>
+                  <span class="parameters">(org.testng.TestRunner@528c868)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testDeleteUser(testuser2)">
-                  </a> <!-- testDeleteUser(testuser2) -->
-                  <span class="method-name">testDeleteUser</span>
-                  <span class="parameters">(testuser2)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testPostUser(1020, testuser2, Kim, Kom, b@gmail.com, test@2, 1234567890)">
-                  </a> <!-- testPostUser(1020, testuser2, Kim, Kom, b@gmail.com, test@2, 1234567890) -->
-                  <span class="method-name">testPostUser</span>
-                  <span class="parameters">(1020,testuser2,Kim,Kom,b@gmail.com,test@2,1234567890)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testPostUser(1010, testuser1, John, Canedy, a@gmail.com, test@1, 1234567890)">
-                  </a> <!-- testPostUser(1010, testuser1, John, Canedy, a@gmail.com, test@1, 1234567890) -->
-                  <span class="method-name">testPostUser</span>
-                  <span class="parameters">(1010,testuser1,John,Canedy,a@gmail.com,test@1,1234567890)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testPostUser(1030, testuser3, Smith, Steve, c@gmail.com, test@3, 1234567890)">
-                  </a> <!-- testPostUser(1030, testuser3, Smith, Steve, c@gmail.com, test@3, 1234567890) -->
-                  <span class="method-name">testPostUser</span>
-                  <span class="parameters">(1030,testuser3,Smith,Steve,c@gmail.com,test@3,1234567890)</span>
+                  <a name="testPostPet(org.testng.TestRunner@528c868)">
+                  </a> <!-- testPostPet(org.testng.TestRunner@528c868) -->
+                  <span class="method-name">testPostPet</span>
+                  <span class="parameters">(org.testng.TestRunner@528c868)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -202,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/94/wvd_9k1n25x4lgm6234rpwyc0000gn/T/testng-eclipse--1284154130/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/94/wvd_9k1n25x4lgm6234rpwyc0000gn/T/testng-eclipse--1355401066/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -211,7 +172,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;api.test.UserDataDrivenTests&quot;/&gt;
+      &lt;class name=&quot;api.test.PetsTests1&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -251,36 +212,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testPostUser')
-data.setCell(0, 2, 'api.test.UserDataDrivenTests')
-data.setCell(0, 3, 4535);
+data.setCell(0, 1, 'testPostPet')
+data.setCell(0, 2, 'api.test.PetsTests1')
+data.setCell(0, 3, 5731);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testPostUser')
-data.setCell(1, 2, 'api.test.UserDataDrivenTests')
-data.setCell(1, 3, 1534);
+data.setCell(1, 1, 'getPetById')
+data.setCell(1, 2, 'api.test.PetsTests1')
+data.setCell(1, 3, 1577);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testDeleteUser')
-data.setCell(2, 2, 'api.test.UserDataDrivenTests')
-data.setCell(2, 3, 1471);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testDeleteUser')
-data.setCell(3, 2, 'api.test.UserDataDrivenTests')
-data.setCell(3, 3, 1418);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'testPostUser')
-data.setCell(4, 2, 'api.test.UserDataDrivenTests')
-data.setCell(4, 3, 1276);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'testDeleteUser')
-data.setCell(5, 2, 'api.test.UserDataDrivenTests')
-data.setCell(5, 3, 1126);
+data.setCell(2, 1, 'deletePetById')
+data.setCell(2, 2, 'api.test.PetsTests1')
+data.setCell(2, 3, 1377);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -306,30 +255,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">api.test.UserDataDrivenTests</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">testPostUser(1010, testuser1, John, Canedy, a@gmail.com, test@1, 1234567890)</span>
+              <div class="chronological-class-name">api.test.PetsTests1</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">testPostPet(org.testng.TestRunner@528c868)</span>
+                <span class="method-start">245 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testPostUser(1020, testuser2, Kim, Kom, b@gmail.com, test@2, 1234567890)</span>
-                <span class="method-start">4550 ms</span>
+                <span class="method-name">getPetById(org.testng.TestRunner@528c868)</span>
+                <span class="method-start">5993 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testPostUser(1030, testuser3, Smith, Steve, c@gmail.com, test@3, 1234567890)</span>
-                <span class="method-start">5835 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testDeleteUser(testuser1)</span>
-                <span class="method-start">7628 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testDeleteUser(testuser2)</span>
-                <span class="method-start">9105 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testDeleteUser(testuser3)</span>
-                <span class="method-start">10238 ms</span>
+                <span class="method-name">deletePetById(org.testng.TestRunner@528c868)</span>
+                <span class="method-start">7578 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
